--- a/fossclub/templates/account/base.html
+++ b/fossclub/templates/account/base.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'account/account.css' %}" />
     <title>{% block head_title %}{% endblock %}</title>
-    {% block extra_head %}
-    {% endblock %}
+    {% block extra_head %} {% endblock %}
   </head>
   <body>
-    {% block body %}
-
-    {% if messages %}
+    {% block body %} {% if messages %}
     <div>
       <strong>Messages:</strong>
       <ul>
@@ -31,10 +30,6 @@
         {% endif %}
       </ul>
     </div>
-    {% block content %}
-    {% endblock %}
-    {% endblock %}
-    {% block extra_body %}
-    {% endblock %}
+    {% block content %} {% endblock %} {% endblock %} {% block extra_body %} {% endblock %}
   </body>
 </html>
