--- a/Dashboard/new_style.css
+++ b/Dashboard/new_style.css
@@ -43,6 +43,14 @@ img {
     width: 100%;
 }
 
+.mar-10 {
+    margin: 10px;
+}
+
+.mt-20 {
+    margin-top: 20px;
+}
+
 .mt-10 {
     margin-top: 10px;
 }
@@ -51,20 +59,69 @@ img {
     margin-right: 10px;
 }
 
+.mb-3 {
+    margin-bottom: 3px;
+}
+
 .mb-5 {
     margin-bottom: 5px;
+}
+
+.mb-10 {
+    margin-bottom: 10px;
+}
+
+.mb-15 {
+    margin-bottom: 15px;
+}
+
+.ml-5 {
+    margin-left: 5px;
+}
+
+.ml-10 {
+    margin-left: 10px;
 }
 
 .pad-2 {
     padding: 2px;
 }
 
+.pad-10 {
+    padding: 10px;
+}
+
 .br-5 {
     border-radius: 5px;
 }
 
+.main {
+    justify-content: space-around;
+    max-width: 80em;
+    margin: 50px auto 0 auto;
+}
+
 .heading--primary {
     margin-bottom: 10px;
+}
+
+.heading--secondary {
+    font-size: 1.1em;
+    font-weight: 700;
+}
+
+.normal-text {
+    font-size: 0.9em;
+}
+
+.btn {
+    display: block;
+    margin: 0 auto 0 auto;
+    padding: 10px;
+    background-color: #3B82F6;
+    color: #f3f4f6;
+    border: none;
+    border-radius: 5px;
 }
 
 .vertical-separator {
@@ -130,13 +187,7 @@ img {
 /* HEADER ENDS */
 
 
-/* MAIN BODY STARTS */
-
-.main {
-    justify-content: space-around;
-    max-width: 80em;
-    margin: 50px auto 0 auto;
-}
+/* MAIN BODY (Achievements) STARTS */
 
 .main__container {
     margin: 0 60px;
@@ -178,4 +229,44 @@ img {
     margin: 5px; /* temporary */
 }
 
-/* MAIN BODY ENDS */
+/* MAIN BODY (Achievements) ENDS */
+
+
+/* PERK CARD STARTS */
+
+.perk-container {
+    max-width: 21em;
+    padding: 10px 0 10px 0;
+    box-shadow: 1px 1px 10px rgba(90, 90, 90, 0.4);
+    transition:  box-shadow 300ms;
+}
+
+.perk-container:hover {
+    box-shadow: 2px 2px 10px rgba(90, 90, 90, 0.4);
+}
+
+.perk-sponsor {
+    display: flex;
+    align-items: center;
+}
+
+.sponsor-logo {
+    width: 25px;
+}
+
+.sponsor-name {
+    font-size: 1.1em;
+    font-weight: 500;
+}
+
+.perk-image {
+    display: block;
+    width: 100%;
+    /* aspect-ratio: calc(9/6); */
+}
+
+.perk-details {
+    padding: 20px;
+}
+
+/* PERK CARD ENDS */
