--- a/fossclub/templates/base.html
+++ b/fossclub/templates/base.html
@@ -23,10 +23,14 @@
             <div class="flex vertical-center container container__header-right">
                 <nav class="flex flex-wrap horizontal-center vertical-center navbar">
                     <div class="flex vertical-center navbar__item">
+                        <a href="/perks/" >
                         Perks
+                        </a>
                     </div>
                     <div class="flex vertical-center navbar__item navbar__item--active">
+                        <a href="/perks/badges" >
                         Achievements
+                        </a>
                     </div>
                 </nav>
                 <hr class="vertical-separator header__vertical-separator" />
