--- a/fossclub/templates/base.html
+++ b/fossclub/templates/base.html
@@ -36,7 +36,7 @@
                 <hr class="vertical-separator header__vertical-separator" />
                 <div class="flex vertical-center header__profile">
                     <div class="headerUsername">
-                        Arven Ozgilliath
+                        Jane Doe
                     </div>
                     <div class="container header__profile-image__container">
                         <img src="{% static "assets/personpfp.jpg" %}" class="header__profile-image" alt="">
