--- a/fossclub/templates/perks/badges.html
+++ b/fossclub/templates/perks/badges.html
@@ -6,7 +6,7 @@
 
     <!-- GOALS START -->
 
-    <div class="main__container main__left-container">
+    <div class="main__container main__large-container">
         <h1 class="heading--primary">
             Goals
         </h1>
@@ -37,7 +37,7 @@
 
     <!-- BADGES START -->
 
-    <div class="main__container main__right-container">
+    <div class="main__container main__small-container">
         <div class="container badge-container">
             <h1 class="heading--primary">
                 Badges
