--- a/fossclub/templates/base.html
+++ b/fossclub/templates/base.html
@@ -3,7 +3,7 @@
 
     <head>
         {% load static %}
-
+            
             <title>{% block head_title %}{% endblock %}</title>
 
         <meta charset="UTF-8" />
@@ -33,15 +33,17 @@
                         </a>
                     </div>
                 </nav>
-                <hr class="vertical-separator header__vertical-separator" />
+                <hr class="vertical-separator header__vertical-separator" />\
+                {% if user.is_authenticated %}
                 <div class="flex vertical-center header__profile">
                     <div class="headerUsername">
-                        Jane Doe
+                        {{ user.first_name }} {{ user.last_name }}
                     </div>
                     <div class="container header__profile-image__container">
-                        <img src="{% static "assets/personpfp.jpg" %}" class="header__profile-image" alt="">
+                        <img src="{{ user.avatar }}" class="header__profile-image" alt="">
                     </div>
                 </div>
+                {% endif %}
             </div>
         </header>
         <!-- HEADER ENDS -->
