--- a/fossclub/templates/base.html
+++ b/fossclub/templates/base.html
@@ -33,14 +33,18 @@
                         </a>
                     </div>
                 </nav>
-                <hr class="vertical-separator header__vertical-separator" />\
+                <hr class="vertical-separator header__vertical-separator" />
                 {% if user.is_authenticated %}
                 <div class="flex vertical-center header__profile">
                     <div class="headerUsername">
                         {{ user.first_name }} {{ user.last_name }}
                     </div>
                     <div class="container header__profile-image__container">
-                        <img src="{{ user.avatar }}" class="header__profile-image" alt="">
+                        {% if user.avatar != "default_avatar.jpg" %}
+                        <img src="{{ user.avatar }}" class="header__profile-image" />
+                        {% else %}
+                        <img src="{% static "assets/personpfp.jpg" %}" class="header__profile-image" />
+                        {% endif %}
                     </div>
                 </div>
                 {% endif %}
