Co-authored-by: KavthaleSam <KavthaleSam@users.noreply.github.com>

--- a/fossclub/templates/base.html
+++ b/fossclub/templates/base.html
@@ -14,7 +14,7 @@
       </head>
     <body>
         <!-- HEADER STARTS -->
-        <header class="flex vertical-center header">
+        <header class="flex vertical-center bg-white header">
             <div class="container">
                 <div class="logo-container">
                     <img src="{% static "assets/default-monochrome.svg" %}" class="logo" />
