--- a/fossclub/templates/perks/badges.html
+++ b/fossclub/templates/perks/badges.html
@@ -7,7 +7,7 @@
     <!-- GOALS START -->
 
     <div class="main__container main__large-container">
-        <h1 class="heading--primary">
+        <h1 class="heading--primary mb-10">
             Goals
         </h1>
         {% for badge, progress in locked_badges %}
@@ -33,13 +33,13 @@
 
     <!-- GOALS END -->
 
-    <hr class="vertical-separator"/>
+    <hr class="vertical-separator main__vertical-separator"/>
 
     <!-- BADGES START -->
 
     <div class="main__container main__small-container">
         <div class="container badge-container">
-            <h1 class="heading--primary">
+            <h1 class="heading--primary mb-10">
                 Badges
             </h1>
             <div class="flex flex-wrap vertical-center mt-10 container">
