--- a/fossclub/templates/perks/list.html
+++ b/fossclub/templates/perks/list.html
@@ -7,10 +7,10 @@
 
 
 {% block content %}
-    <div class="main">
+    <main class="main">
         {% for perk in perks %}
 
-        <div class="br-5 perk-container">
+        <div class="br-5 bg-white card-container perk-container">
             <div class="flex vertical-center mb-10 ml-10 perk-sponsor">
                 <img src="sponsorLogo.svg" alt="Sponsoro logo" class="sponsor-logo" />
                 <div class="ml-5 sponsor-name">Macrohard</div>
@@ -39,5 +39,5 @@
             <button class="mb-15 btn" style="cursor: pointer">Claim Now</button>
         </div>
         {% endfor %}
-    </div>
+    </main>
 {% endblock %}
