--- a/fossclub/static/new_style.css
+++ b/fossclub/static/new_style.css
@@ -272,8 +272,11 @@ hr {
 
 .goal {
     padding: 10px;
-    background: linear-gradient(45deg, #ddd6fe
-    , #d8b4fe, #e879f9); /* temporary */
+    background: linear-gradient(45deg, #f8fafc, #f2f4f7, #eff0f1);
+    border-radius: 5px;
+    border: 1px solid #e5e7eb;
+    box-shadow: 1px 1px 8px rgba(92, 89, 89, 0.336);
+    margin-bottom: 20px;
 }
 
 .goals__badge-image {
