--- a/Dashboard/new_style.css
+++ b/Dashboard/new_style.css
@@ -15,7 +15,16 @@
 
 }
 
+body {
+    background-color: #F3F4F6;
+}
+
 /* COMMON CLASSES START */
+
+a {
+    color: black;
+    text-decoration: none;
+}
 
 img {
     width: 100%;
@@ -39,60 +48,20 @@ img {
     justify-content: center;
 }
 
-.w-100 {
-    width: 100%;
+.bg-white {
+    background-color: white;
 }
 
-.mar-10 {
-    margin: 10px;
+.text-center {
+    text-align: center;
 }
 
-.mt-20 {
-    margin-top: 20px;
+.bold {
+    font-weight: bold;
 }
 
-.mt-10 {
-    margin-top: 10px;
-}
-
-.mr-10 {
-    margin-right: 10px;
-}
-
-.mb-3 {
-    margin-bottom: 3px;
-}
-
-.mb-5 {
-    margin-bottom: 5px;
-}
-
-.mb-10 {
-    margin-bottom: 10px;
-}
-
-.mb-15 {
-    margin-bottom: 15px;
-}
-
-.ml-5 {
-    margin-left: 5px;
-}
-
-.ml-10 {
-    margin-left: 10px;
-}
-
-.pad-2 {
-    padding: 2px;
-}
-
-.pad-10 {
-    padding: 10px;
-}
-
-.br-5 {
-    border-radius: 5px;
+.underline {
+    text-decoration: underline;
 }
 
 .main {
@@ -101,8 +70,13 @@ img {
     margin: 50px auto 0 auto;
 }
 
+.heading {
+    width: 100%;
+    font-weight: 700;
+}
+
 .heading--primary {
-    margin-bottom: 10px;
+    font-size: 1.5em;
 }
 
 .heading--secondary {
@@ -110,12 +84,24 @@ img {
     font-weight: 700;
 }
 
+.heading--sub {
+    font-size: 1em;
+    font-weight: 500;
+    color: rgb(146, 146, 146);
+}
+
 .normal-text {
     font-size: 0.9em;
 }
 
+.card-container {
+    max-width: 21em;
+    padding: 10px 0 10px 0;
+}
+
 .btn {
     display: block;
+    width: 90px;
     margin: 0 auto 0 auto;
     padding: 10px;
     background-color: #3B82F6;
@@ -124,9 +110,25 @@ img {
     border-radius: 5px;
 }
 
-.vertical-separator {
+hr {
     border: none;
+}
+
+.horizontal-separator {
+    width: 90%;
+    border-bottom: 1px solid grey;
+}
+
+.vertical-separator {
     border-right: 1px solid grey;
+}
+
+.main__vertical-separator {
+    margin: 0 60px;
+}
+
+.card-details {
+    padding: 20px;
 }
 
 /* COMMON CLASSES END */
@@ -190,20 +192,21 @@ img {
 /* MAIN BODY (Achievements) STARTS */
 
 .main__container {
-    margin: 0 60px;
+    /* margin: 0 60px; */
 }
 
-.main__left-container {
+.main__large-container {
     width: 70%;
 }
 
-.main__right-container {
+.main__small-container {
     width: 30%;
 }
 
 .goal {
     padding: 10px;
-    background-color: bisque; /* temporary */
+    background: linear-gradient(45deg, #ddd6fe
+    , #d8b4fe, #e879f9); /* temporary */
 }
 
 .goals__badge-image {
@@ -216,14 +219,16 @@ img {
 
 .goal__progressbar {
     width: 85%;
-    height: 15px;
-    border: 2px solid red;
-    background-color: blue;
+    height: 25px;
+}
+
+.goal__progress-count {
+    flex: 100%;
 }
 
 .badge {
     width: 30%;
-    max-width: 100px;
+    max-width: 64px;
     aspect-ratio: 1;
     background-color: #f0abfc;
     margin: 5px; /* temporary */
@@ -235,19 +240,12 @@ img {
 /* PERK CARD STARTS */
 
 .perk-container {
-    max-width: 21em;
-    padding: 10px 0 10px 0;
     box-shadow: 1px 1px 10px rgba(90, 90, 90, 0.4);
     transition:  box-shadow 300ms;
 }
 
 .perk-container:hover {
     box-shadow: 2px 2px 10px rgba(90, 90, 90, 0.4);
-}
-
-.perk-sponsor {
-    display: flex;
-    align-items: center;
 }
 
 .sponsor-logo {
@@ -262,11 +260,209 @@ img {
 .perk-image {
     display: block;
     width: 100%;
-    /* aspect-ratio: calc(9/6); */
-}
-
-.perk-details {
-    padding: 20px;
+    aspect-ratio: calc(9/6);
 }
 
 /* PERK CARD ENDS */
+
+
+/* USER PROFILE START */
+
+/* TEMPORARY */
+.main__container {
+    /* border: 1px solid black; */
+}
+/* TEMPORARY */
+
+.user-pfp {
+    width: 200px;
+    aspect-ratio: 1;
+    border-radius: 0.5rem; /* temporary */
+}
+
+/* USER PROFILE END */
+
+
+/* USER ACTIVITY START */
+
+.user-activity__date {
+    width: 150px;
+    margin: auto;
+    background-color: rgba(0,184,92,0.1);
+    color: #00b85c;
+    border-bottom: 2px solid #4C1D95;
+}
+
+.user-activity__date-clock {
+    width: 20px;
+    height: 20px;
+}
+
+.user-activity__connector {
+    border-right: 3px solid #4C1D95;
+    z-index: -1;
+}
+
+.user-activity {
+    width: 690px;
+    /* Temporary */
+    background-color: rgba(137,76,255,0.1);
+    color: #894cff;
+    /* Temporary */
+    padding: 40px;
+}
+
+.user-activity a {
+    color: inherit; /* Temporary */
+}
+
+/* USER ACTIVITY END */
+
+
+/* PERK PAGE START */
+
+.perk-info__container-right {
+    width: 60%;
+}
+
+.perk-info-image {
+    padding: 2px;
+    border: 2px solid grey;
+}
+
+.perk-info-container {
+    max-width: 40em;
+}
+
+.perk-name {
+    font-weight: 900;
+}
+
+/* PERK PAGE END */
+
+
+/* BADGE CARD STARTS */
+
+    .badge-image {
+        display: block;
+        width: 100px;
+        aspect-ratio: 1;
+        margin: auto;
+        border-radius: 5px 5px 0 0;
+    }
+
+/* BADGE CARD ENDS */
+
+
+/* MARGINS AND PADDINGS START */
+
+.w-100 {
+    width: 100%;
+}
+
+.w-60 {
+    width: 60%;
+}
+
+.h-20 {
+    height: 20px;
+}
+
+.br-5 {
+    border-radius: 5px;
+}
+
+.mar-0 {
+    margin: 0;
+}
+
+.mar-10 {
+    margin: 10px;
+}
+
+.mar-20 {
+    margin: 20px;
+}
+
+.mt-20 {
+    margin-top: 20px;
+}
+
+.mt-10 {
+    margin-top: 10px;
+}
+
+.mr-auto {
+    margin-right: auto;
+}
+
+.mr-10 {
+    margin-right: 10px;
+}
+
+.mr-50 {
+    margin-right: 50px;
+}
+
+.mr-100 {
+    margin-right: 100%;
+}
+
+.mb-3 {
+    margin-bottom: 3px;
+}
+
+.mb-5 {
+    margin-bottom: 5px;
+}
+
+.mb-10 {
+    margin-bottom: 10px;
+}
+
+.mb-15 {
+    margin-bottom: 15px;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.ml-0 {
+    margin-left: 0;
+}
+
+.ml-5 {
+    margin-left: 5px;
+}
+
+.ml-10 {
+    margin-left: 10px;
+}
+
+.pad-2 {
+    padding: 2px;
+}
+
+.pad-10 {
+    padding: 10px;
+}
+
+.pt-0 {
+    padding-top: 0;
+}
+
+.pt-20 {
+    padding-top: 20px;
+}
+
+.pb-0 {
+    padding-bottom: 0;
+}
+
+.bolder {
+    font-weight: 900;
+}
+
+
+/* MARGINS AND PADDINGS END */
