--- a/fossclub/templates/perks/badges.html
+++ b/fossclub/templates/perks/badges.html
@@ -56,7 +56,7 @@
 
 </main>
 
-<div iclass="flex horizontal-center vertical-center hidden full-container">
+<div id="badge_card" class="flex horizontal-center vertical-center hidden full-container">
     <div class="br-5 pt-20 pb-0 bg-white card-container">
         <img src="rockstar50.png" class="badge-image" alt="Perk image">
         <div class="card-details">
