--- a/fossclub/templates/perks/badges.html
+++ b/fossclub/templates/perks/badges.html
@@ -77,7 +77,7 @@
 
 <script>
     function toggleBadgeCard () {
-        document.getElementById("")
+        document.getElementById("badge_card")
     }
 </script>
 
