--- a/fossclub/templates/base.html
+++ b/fossclub/templates/base.html
@@ -24,7 +24,7 @@
             </div>
             <div class="flex vertical-center container container__header-right">
                 <nav class="flex flex-wrap horizontal-center vertical-center navbar">
-                    <a href="#" class="flex vertical-center br-5 navbar__item add-perk">Add a Perk</a>
+                    <a href="/perks/new/" class="flex vertical-center br-5 navbar__item add-perk">Add a Perk</a>
                     <a href="/perks/" class="flex vertical-center navbar__item">
                         Perks
                     </a>
