Co-authored-by: KavthaleSam <KavthaleSam@users.noreply.github.com>

--- a/fossclub/templates/base.html
+++ b/fossclub/templates/base.html
@@ -28,13 +28,13 @@
                     <a href="/perks/" class="flex vertical-center navbar__item">
                         Perks
                     </a>
-                    <a href="/perks/badges" class="flex vertical-center navbar__item navbar__item--active">
+                    <a href="/perks/badges" class="flex vertical-center navbar__item">
                         Achievements
                     </a>
                 </nav>
                 <hr class="vertical-separator header__vertical-separator" />
                 {% if user.is_authenticated %}
-                <a href="/account/profile/">
+                <a href="/accounts/profile/">
                 <div class="flex vertical-center header__profile">
                     <div class="headerUsername">
                         {{ user.first_name }} {{ user.last_name }}
