--- a/fossclub/static/new_style.css
+++ b/fossclub/static/new_style.css
@@ -128,6 +128,7 @@ img {
     color: #f3f4f6;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 hr {
@@ -135,6 +136,7 @@ hr {
 }
 
 .horizontal-separator {
+    height: 1px;
     width: 90%;
     border-bottom: 1px solid grey;
 }
@@ -277,7 +279,7 @@ hr {
 
 .badge {
     width: 30%;
-    max-width: 64px;
+    width: 64px;
     aspect-ratio: 1;
     margin: 5px; /* temporary */
 }
